--- a/index.html
+++ b/index.html
@@ -59,12 +59,9 @@
         </section>
         <section class="section__2">
                             <h2>¡Bienvenidos a la página!</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius sed accusantium laudantium et non iusto repellendus nihil dolorem deleniti. Ducimus dolor corrupti tempore assumenda et earum quasi quod delectus laborum?
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, nulla! Cumque fugit vero quos quisquam. Amet pariatur maiores, numquam vel accusamus tenetur, ut ex exercitationem, temporibus velit iusto assumenda nostrum!
-                Nostrum, magnam aperiam. Consequuntur, architecto facere sed, inventore maxime placeat consequatur aliquam facilis, culpa modi temporibus eos voluptas! Suscipit repellendus doloremque porro aperiam doloribus magnam temporibus, est laboriosam fugiat veritatis.
-
-            </p>
+                            <p>Michi Tazas es un emprendimiento autogestivo especializado en la venta de artículos personalizados al gusto de nuestro clientes con los mejores diseños: lo querés, lo pedís, lo tenés. ¡Y aún hay más! Porque si bien nos especializamos en tazas, también nos estamos expandiendo a otros productos, como fundas de celulares, bolsas y otros.</p>
+                            <p>Así que ya sabés: si te cansaste de los diseños aburridos de las otras tazas del mercado, tenés una idea original o simplemente querés regalarle algo diferente y personal a otra persona, esta es tu tienda. Además, como si eso fuera poco, ¡tenemos michis!</p>
+                           
         </section>
     </main>
     
