--- a/nosotros.html
+++ b/nosotros.html
@@ -88,10 +88,10 @@
 
         <div id="hijoTres">
             <section>
-                <h1>Sobre nosotros</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta placeat laudantium sequi officiis perspiciatis eum expedita ullam ipsam quia odit illum illo architecto, temporibus velit nam eveniet atque assumenda sint. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta placeat laudantium sequi officiis perspiciatis eum expedita ullam ipsam quia odit illum illo architecto, temporibus velit nam eveniet atque assumenda sint. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta placeat laudantium sequi officiis perspiciatis eum expedita ullam ipsam quia odit illum illo architecto, temporibus velit nam eveniet atque assumenda sint.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta placeat laudantium sequi officiis perspiciatis eum expedita ullam ipsam quia odit illum illo architecto, temporibus velit nam eveniet atque assumenda sint. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta placeat laudantium sequi officiis perspiciatis eum expedita ullam ipsam quia odit illum illo architecto, temporibus velit nam eveniet atque assumenda sint. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta placeat laudantium sequi officiis perspiciatis eum expedita ullam ipsam quia odit illum illo architecto, temporibus velit nam eveniet atque assumenda sint.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta placeat laudantium sequi officiis perspiciatis eum expedita ullam ipsam quia odit illum illo architecto, temporibus velit nam eveniet atque assumenda sint. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta placeat laudantium sequi officiis perspiciatis eum expedita ullam ipsam quia odit illum illo architecto, temporibus velit nam eveniet atque assumenda sint. Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <h1>Sobre nosotros... Pero más importante: sobre Michi</h2>
+                  <p>"Michi" no es solamente el nombre de nuestra marca: es la mascota de la tienda, y la musa felina que nos inspiró, nos inspira y nos seguirá inspirando. ¿Estoy sugiriendo con esto, queride cliente, que con tu compra podés ayudar a que su plato nunca esté vacío? No, no, no, no, no, no... Bueno, sí.</p>
+
+                  <p>Para saber más sobre Michi, podés seguirnos en nuestras redes sociales. ¡Incluso si no te interesan las tazas, lo recomendamos con toda vehemencia!</p>
             </section>
         </div>
 
