--- a/galeria.html
+++ b/galeria.html
@@ -59,63 +59,73 @@
           <div class="main__fondoImagen">
           <img src="Hellboy.jpg" alt="Taza modelo Hellboy" class=tazas width="250">
           </div>
-          <h2>Producto 1</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, necessitatibus! Sunt quae qui voluptatum fugiat ut laudantium quidem laborum rerum velit sed, molestiae repellat id. Officia laboriosam nesciunt animi quaerat?</p>
+          <h2>Taza Hellboy</h2>
+          <p>Hellboy es un superhéroe creado por el escritor y dibujante Mike Mignola. El personaje apareció por primera vez en San Diego Comic-Con Comics # 2 (agosto de 1993), y desde entonces ha aparecido en varias miniseries epónimas, one-shots y crossovers entre compañías. El personaje ha sido adaptado a distintos medios y plataformas.</p>
       </div>
 
       <div class="main__cardProducto" id="caja-2">
           <div class="main__fondoImagen">
           <img src="Hufflepuff.jpg" alt="Taza modelo Hufflepuff" class=tazas width="250">
           </div>
-          <h2>Producto 2</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, necessitatibus! Sunt quae qui voluptatum fugiat ut laudantium quidem laborum rerum velit sed, molestiae repellat id. Officia laboriosam nesciunt animi quaerat?</p>
+          <h2>Taza Hufflepuff</h2>
+          <p>Hufflepuff es una de las cuatro casas en las que se dividen los estudiantes del Colegio Hogwarts de Magia y Hechicería en el universo de fantasía y ficción de los libros de Harry Potter.
+            Esta casa fue fundada por Helga Hufflepuff, y resalta las virtudes de aquellos que son justos, leales y que no temen el trabajo pesado.</p>
       </div>
 
       <div class="main__cardProducto" id="caja-3">
           <div class="main__fondoImagen">
           <img src="Sakura.jpg" alt="Taza modelo Sakura" class=tazas width="250">
           </div>
-          <h2>Producto 3</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, necessitatibus! Sunt quae qui voluptatum fugiat ut laudantium quidem laborum rerum velit sed, molestiae repellat id. Officia laboriosam nesciunt animi quaerat?</p>
+          <h2>Taza Sakura</h2>
+          <p>La historia se centra en Sakura Kinomoto, una pequeña niña que descubre sus extraños poderes mágicos después de haber liberado accidentalmente un conjunto de cartas que se encontraban dentro de un libro. Tras esto Sakura con la ayuda de sus amigos se ve obligada a recolectar y cuidar las «Cartas Clow» para evitar que ocurra una catástrofe en el mundo.</p>
       </div>
       <div class="main__cardProducto" id="caja-4">
           <div class="main__fondoImagen">
           <img src="Lisa.jpg" alt="Taza modelo Lisa" class=tazas width="250">
           </div>
-          <h2>Producto 4</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, necessitatibus! Sunt quae qui voluptatum fugiat ut laudantium quidem laborum rerum velit sed, molestiae repellat id. Officia laboriosam nesciunt animi quaerat?</p>
+          <h2>Taza Lisa</h2>
+          <p>Lisa Marie Simpson es un personaje de la serie de televisión de dibujos animados Los Simpson. Es la hija mediana de Homero y Marge Simpson y hermana de Bart y Maggie. Goza de notable protagonismo y complejidad en la serie. Lisa es lista, curiosa y ambiciosa y demuestra ser el miembro de la familia con más conocimiento intelectual, sobre todo en ámbitos académicos. </p>
       </div>
 
       <div class="main__cardProducto" id="caja-5">
           <div class="main__fondoImagen">
-          <img src="Hellboy.jpg" alt="Taza modelo Hellboy" class=tazas width="250">
+          <img src="Totoro2.jpeg" alt="Taza modelo Totoro" class=tazas width="250">
           </div>
-          <h2>Producto 5</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, necessitatibus! Sunt quae qui voluptatum fugiat ut laudantium quidem laborum rerum velit sed, molestiae repellat id. Officia laboriosam nesciunt animi quaerat?</p>
+          <h2>Taza Totoro</h2>
+          <p>Esta historia animada del director Hayao Miyazaki sigue a las estudiantes y hermanas Satsuki y Mei mientras se establecen en su casa de campo con su padre y esperan a que su madre se recupere de una enfermedad en un hospital del área. Cuando las hermanas exploran su nueva casa, descubren y hacen amistad con unos duendes juguetones, y en el bosque cercano encuentran a una enorme criatura conocida como Totoro.</p>
       </div>
 
       <div class="main__cardProducto" id="caja-1">
           <div class="main__fondoImagen">
-          <img src="Hufflepuff.jpg" alt="Taza modelo Hufflepuff" class=tazas width="250">
+          <img src="FairyTail.jpeg" alt="Taza modelo Fairy Tail" class=tazas width="250">
           </div>
-          <h2>Producto 6</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, necessitatibus! Sunt quae qui voluptatum fugiat ut laudantium quidem laborum rerum velit sed, molestiae repellat id. Officia laboriosam nesciunt animi quaerat?</p>
+          <h2>Taza Fairy Tail</h2>
+          <p>Fairy Tail (フェアリーテイル Fearī Teiru , lit. «Cola de Hada» ​) es un manga de aventura y fantasía escrito e ilustrado por Hiro Mashima, publicado por primera vez el 23 de agosto de 2006 en la revista Shōnen Magazine, de la editorial japonesa Kōdansha. Existen 545 capítulos impresos, los cuales están recopilados en 63 volúmenes (tankōbon), hasta su finalización en julio de 2017.</p>
       </div>
 
       <div class="main__cardProducto" id="caja-2">
           <div class="main__fondoImagen">
-          <img src="Sakura.jpg" alt="Taza modelo Sakura" class=tazas width="250">
+          <img src="DragonBall.jpeg" alt="Taza modelo Dragon Ball" class=tazas width="250">
           </div>
-          <h2>Producto 7</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, necessitatibus! Sunt quae qui voluptatum fugiat ut laudantium quidem laborum rerum velit sed, molestiae repellat id. Officia laboriosam nesciunt animi quaerat?</p>
+          <h2>Taza Dragon Ball</h2>
+          <p>Dragon Ball (ドラゴンボール lit. Bola de dragón/Esfera del dragón ) es un manga escrito e ilustrado por Akira Toriyama. Fue publicado originalmente en la revista Shōnen Jump, de la editorial japonesa Shūeisha, entre 1984 y 1995. ​ ​ Su trama describe las aventuras de Gokū, un guerrero saiyajin, cuyo fin es proteger a la Tierra de otros seres que quieren conquistarla y exterminar a la humanidad.</p>
       </div>
       <div class="main__cardProducto" id="caja-3">
           <div class="main__fondoImagen">
-          <img src="Lisa.jpg" alt="Taza modelo Lisa" class=tazas width="250">
+          <img src="Dali.jpeg" alt="Taza modelo Dalí" class=tazas width="250">
           </div>
-          <h2>Producto 8</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, necessitatibus! Sunt quae qui voluptatum fugiat ut laudantium quidem laborum rerum velit sed, molestiae repellat id. Officia laboriosam nesciunt animi quaerat?</p>
+          <h2>Taza Dalí</h2>
+          <p>"Deme dos horas al día de actividad y seguiré las otras veintidós en sueños"
+
+            Con esa frase, una de las mas grandes y célebres de Salvador Dali, damos pie para presentar en nuestras tazas al autor de esta pintura titulada "Cisnes que se reflejan como elefantes".</p>
       </div>
+      <div class="main__cardProducto" id="caja-3">
+        <div class="main__fondoImagen">
+        <img src="Ricciarelli.jpeg" alt="Taza modelo Ricciarelli" class=tazas width="250">
+        </div>
+        <h2>Taza Ricciarelli</h2>
+        <p>Daniele da Volterra pinta esta y muchas mas de sus obras inspirado por el mismismo Miguel Angel a la hora de pintar. Es asi que muchos muchas veces confunden sus obras con las suyas. Esta en particular es interesante ya que se pinto la misma escena desde ambas perspectivas, para que pudise disfrutarse desde mas de un punto de vista, como si de una escultura se tratase.</p>
+    </div>
 </main>
     
     <footer>
